# ji_coursenotes

./: .gitignore  .gitmodules  README.md  go.mod  go.sum
2019fall/CSCI927/assignment/: assignment.tex
2019fall/CSCI927/project/: README.md
2019fall/CSCI971/lab/: bsgs.cxx
2019fall/CSIT940/assignment1/: assignment.tex
2020spring/CSCI964/assignment3-0418/SOM/src/demo/knnl/: AUTHORS  CMakeLists.txt  README
2020spring/CSCI964/assignment3-0418/SOM/src/demo/knnl/helper_scripts/: plots_matlab.m  plots_octave.m
2020spring/CSCI964/assignment3-0418/SOM/src/demo/knnl/include/: basic_neuron.hpp  numeric_iterator.hpp  ranges.hpp  weighted_euclidean_distance_function.hpp  wta_training_algorithm.hpp  wtm_topology.hpp
2020spring/CSCI964/assignment3-0418/SOM/src/demo/knnl/source/: main.cpp
2021spring/CCNUMaster/: Outline.md
CSCI971/assignment/: bib.tex
CSIT940/assignment/: ai-videogames.tex  bib.tex  references.bib
CSIT940/example/: mybib.bib
Engineering Ethics/Translation/: Journal.tex
Politics/: elegantpaper-cn.tex
Tools/ElegantPaper/: __latexindent_temp.tex
Tools/formula/: formula.tex
Tools/pdflatexlab/: lab.tex
Tools/resume/: resume.tex
Tools/script/: thesis.bat  thesis.sh
Tools/timerbeamer/: slide.tex
assignment1/: AssignmentProblem4.py  AssignmentProblem5.py  Lab.ipynb  Problem5.py
assignment1/.ipynb_checkpoints/: Lab-checkpoint.ipynb
assignment1/latex/: assignment.tex
assignment2/latex/: assignment.tex
template/: template.tex
template/homework/: template.tex
template/ref/: informe.tex  references.bib
worklab/lisp/: test.lisp
(+1478 files in other folders)
